tests/parser/tests/cases/should_fail/incomplete_list_pattern/case.stderr
error: encountered unclosed delimiter `[`, add a `]` after the inner expression
 --> $DIR/case.hash:1:1
1 |   [a := b;
  |   ^ here
